Projeto_Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMI block DOT
Rule 2     block -> declarations BEGIN statements_body END
Rule 3     block -> BEGIN statements_body END
Rule 4     declarations -> VAR var_declaration_list_nonempty
Rule 5     declarations -> empty_decl_tag
Rule 6     empty_decl_tag -> <empty>
Rule 7     var_declaration_list_nonempty -> var_declaration SEMI
Rule 8     var_declaration_list_nonempty -> var_declaration SEMI var_declaration_list_nonempty
Rule 9     var_declaration -> id_list COLON type
Rule 10    type -> basic_type
Rule 11    type -> array_type
Rule 12    basic_type -> INTEGER
Rule 13    basic_type -> BOOLEAN
Rule 14    array_type -> ARRAY LSQUARE NUMBER DOTDOT NUMBER RSQUARE OF type
Rule 15    id_list -> ID
Rule 16    id_list -> ID COMMA id_list
Rule 17    statements_body -> statement_sequence
Rule 18    statements_body -> empty_stmt_node
Rule 19    statement_sequence -> statement
Rule 20    statement_sequence -> statement SEMI statement_sequence
Rule 21    empty_stmt_node -> <empty>
Rule 22    statement -> writeln_stmt
Rule 23    statement -> write_stmt
Rule 24    statement -> readln_stmt
Rule 25    statement -> assign_stmt
Rule 26    statement -> for_loop
Rule 27    statement -> if_stmt
Rule 28    statement -> while_loop
Rule 29    statement -> block
Rule 30    statement -> empty_stmt_node
Rule 31    writeln_stmt -> WRITELN LPAREN expr_list RPAREN
Rule 32    write_stmt -> WRITE LPAREN expr_list RPAREN
Rule 33    readln_stmt -> READLN LPAREN variable_list RPAREN
Rule 34    assign_stmt -> variable ASSIGN expression
Rule 35    for_loop -> FOR ID ASSIGN expression TO expression DO statement
Rule 36    if_stmt -> IF condition THEN statement else_clause
Rule 37    else_clause -> ELSE statement
Rule 38    else_clause -> empty_stmt_node
Rule 39    while_loop -> WHILE condition DO statement
Rule 40    variable -> ID
Rule 41    variable -> ID LSQUARE expression RSQUARE
Rule 42    variable_list -> variable
Rule 43    variable_list -> variable COMMA variable_list
Rule 44    expr_list -> expr
Rule 45    expr_list -> expr COMMA expr_list
Rule 46    expr -> STRING_LITERAL
Rule 47    expr -> expression
Rule 48    expression -> expression PLUS expression
Rule 49    expression -> expression MINUS expression
Rule 50    expression -> expression MULT expression
Rule 51    expression -> expression DIV expression
Rule 52    expression -> expression MOD expression
Rule 53    expression -> LPAREN expression RPAREN
Rule 54    expression -> factor
Rule 55    factor -> NUMBER
Rule 56    factor -> variable
Rule 57    factor -> TRUE
Rule 58    factor -> FALSE
Rule 59    condition -> condition AND condition
Rule 60    condition -> condition OR condition
Rule 61    condition -> expression GT expression
Rule 62    condition -> expression LT expression
Rule 63    condition -> expression GE expression
Rule 64    condition -> expression LE expression
Rule 65    condition -> expression EQ expression
Rule 66    condition -> expression NE expression
Rule 67    condition -> LPAREN condition RPAREN
Rule 68    condition -> expression

Terminals, with rules where they appear

AND                  : 59
ARRAY                : 14
ASSIGN               : 34 35
BEGIN                : 2 3
BOOLEAN              : 13
COLON                : 9
COMMA                : 16 43 45
DIV                  : 51
DO                   : 35 39
DOT                  : 1
DOTDOT               : 14
ELSE                 : 37
END                  : 2 3
EQ                   : 65
FALSE                : 58
FOR                  : 35
GE                   : 63
GT                   : 61
ID                   : 1 15 16 35 40 41
IF                   : 36
INTEGER              : 12
LE                   : 64
LPAREN               : 31 32 33 53 67
LSQUARE              : 14 41
LT                   : 62
MINUS                : 49
MOD                  : 52
MULT                 : 50
NE                   : 66
NUMBER               : 14 14 55
OF                   : 14
OR                   : 60
PLUS                 : 48
PROGRAM              : 1
READLN               : 33
RPAREN               : 31 32 33 53 67
RSQUARE              : 14 41
SEMI                 : 1 7 8 20
STRING_LITERAL       : 46
THEN                 : 36
TO                   : 35
TRUE                 : 57
VAR                  : 4
WHILE                : 39
WRITE                : 32
WRITELN              : 31
error                : 

Nonterminals, with rules where they appear

array_type           : 11
assign_stmt          : 25
basic_type           : 10
block                : 1 29
condition            : 36 39 59 59 60 60 67
declarations         : 2
else_clause          : 36
empty_decl_tag       : 5
empty_stmt_node      : 18 30 38
expr                 : 44 45
expr_list            : 31 32 45
expression           : 34 35 35 41 47 48 48 49 49 50 50 51 51 52 52 53 61 61 62 62 63 63 64 64 65 65 66 66 68
factor               : 54
for_loop             : 26
id_list              : 9 16
if_stmt              : 27
program              : 0
readln_stmt          : 24
statement            : 19 20 35 36 37 39
statement_sequence   : 17 20
statements_body      : 2 3
type                 : 9 14
var_declaration      : 7 8
var_declaration_list_nonempty : 4 8
variable             : 34 42 43 56
variable_list        : 33 43
while_loop           : 28
write_stmt           : 23
writeln_stmt         : 22

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMI block DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMI block DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMI block DOT

    SEMI            shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMI . block DOT
    (2) block -> . declarations BEGIN statements_body END
    (3) block -> . BEGIN statements_body END
    (4) declarations -> . VAR var_declaration_list_nonempty
    (5) declarations -> . empty_decl_tag
    (6) empty_decl_tag -> .

  ! shift/reduce conflict for BEGIN resolved as shift
    BEGIN           shift and go to state 7
    VAR             shift and go to state 8

  ! BEGIN           [ reduce using rule 6 (empty_decl_tag -> .) ]

    block                          shift and go to state 5
    declarations                   shift and go to state 6
    empty_decl_tag                 shift and go to state 9

state 5

    (1) program -> PROGRAM ID SEMI block . DOT

    DOT             shift and go to state 10


state 6

    (2) block -> declarations . BEGIN statements_body END

    BEGIN           shift and go to state 11


state 7

    (3) block -> BEGIN . statements_body END
    (17) statements_body -> . statement_sequence
    (18) statements_body -> . empty_stmt_node
    (19) statement_sequence -> . statement
    (20) statement_sequence -> . statement SEMI statement_sequence
    (21) empty_stmt_node -> .
    (22) statement -> . writeln_stmt
    (23) statement -> . write_stmt
    (24) statement -> . readln_stmt
    (25) statement -> . assign_stmt
    (26) statement -> . for_loop
    (27) statement -> . if_stmt
    (28) statement -> . while_loop
    (29) statement -> . block
    (30) statement -> . empty_stmt_node
    (31) writeln_stmt -> . WRITELN LPAREN expr_list RPAREN
    (32) write_stmt -> . WRITE LPAREN expr_list RPAREN
    (33) readln_stmt -> . READLN LPAREN variable_list RPAREN
    (34) assign_stmt -> . variable ASSIGN expression
    (35) for_loop -> . FOR ID ASSIGN expression TO expression DO statement
    (36) if_stmt -> . IF condition THEN statement else_clause
    (39) while_loop -> . WHILE condition DO statement
    (2) block -> . declarations BEGIN statements_body END
    (3) block -> . BEGIN statements_body END
    (40) variable -> . ID
    (41) variable -> . ID LSQUARE expression RSQUARE
    (4) declarations -> . VAR var_declaration_list_nonempty
    (5) declarations -> . empty_decl_tag
    (6) empty_decl_tag -> .

  ! shift/reduce conflict for BEGIN resolved as shift
    END             reduce using rule 21 (empty_stmt_node -> .)
    SEMI            reduce using rule 21 (empty_stmt_node -> .)
    WRITELN         shift and go to state 24
    WRITE           shift and go to state 25
    READLN          shift and go to state 26
    FOR             shift and go to state 28
    IF              shift and go to state 30
    WHILE           shift and go to state 31
    BEGIN           shift and go to state 7
    ID              shift and go to state 29
    VAR             shift and go to state 8

  ! BEGIN           [ reduce using rule 6 (empty_decl_tag -> .) ]

    statements_body                shift and go to state 12
    statement_sequence             shift and go to state 13
    empty_stmt_node                shift and go to state 14
    statement                      shift and go to state 15
    writeln_stmt                   shift and go to state 16
    write_stmt                     shift and go to state 17
    readln_stmt                    shift and go to state 18
    assign_stmt                    shift and go to state 19
    for_loop                       shift and go to state 20
    if_stmt                        shift and go to state 21
    while_loop                     shift and go to state 22
    block                          shift and go to state 23
    variable                       shift and go to state 27
    declarations                   shift and go to state 6
    empty_decl_tag                 shift and go to state 9

state 8

    (4) declarations -> VAR . var_declaration_list_nonempty
    (7) var_declaration_list_nonempty -> . var_declaration SEMI
    (8) var_declaration_list_nonempty -> . var_declaration SEMI var_declaration_list_nonempty
    (9) var_declaration -> . id_list COLON type
    (15) id_list -> . ID
    (16) id_list -> . ID COMMA id_list

    ID              shift and go to state 35

    var_declaration_list_nonempty  shift and go to state 32
    var_declaration                shift and go to state 33
    id_list                        shift and go to state 34

state 9

    (5) declarations -> empty_decl_tag .

    BEGIN           reduce using rule 5 (declarations -> empty_decl_tag .)


state 10

    (1) program -> PROGRAM ID SEMI block DOT .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMI block DOT .)


state 11

    (2) block -> declarations BEGIN . statements_body END
    (17) statements_body -> . statement_sequence
    (18) statements_body -> . empty_stmt_node
    (19) statement_sequence -> . statement
    (20) statement_sequence -> . statement SEMI statement_sequence
    (21) empty_stmt_node -> .
    (22) statement -> . writeln_stmt
    (23) statement -> . write_stmt
    (24) statement -> . readln_stmt
    (25) statement -> . assign_stmt
    (26) statement -> . for_loop
    (27) statement -> . if_stmt
    (28) statement -> . while_loop
    (29) statement -> . block
    (30) statement -> . empty_stmt_node
    (31) writeln_stmt -> . WRITELN LPAREN expr_list RPAREN
    (32) write_stmt -> . WRITE LPAREN expr_list RPAREN
    (33) readln_stmt -> . READLN LPAREN variable_list RPAREN
    (34) assign_stmt -> . variable ASSIGN expression
    (35) for_loop -> . FOR ID ASSIGN expression TO expression DO statement
    (36) if_stmt -> . IF condition THEN statement else_clause
    (39) while_loop -> . WHILE condition DO statement
    (2) block -> . declarations BEGIN statements_body END
    (3) block -> . BEGIN statements_body END
    (40) variable -> . ID
    (41) variable -> . ID LSQUARE expression RSQUARE
    (4) declarations -> . VAR var_declaration_list_nonempty
    (5) declarations -> . empty_decl_tag
    (6) empty_decl_tag -> .

  ! shift/reduce conflict for BEGIN resolved as shift
    END             reduce using rule 21 (empty_stmt_node -> .)
    SEMI            reduce using rule 21 (empty_stmt_node -> .)
    WRITELN         shift and go to state 24
    WRITE           shift and go to state 25
    READLN          shift and go to state 26
    FOR             shift and go to state 28
    IF              shift and go to state 30
    WHILE           shift and go to state 31
    BEGIN           shift and go to state 7
    ID              shift and go to state 29
    VAR             shift and go to state 8

  ! BEGIN           [ reduce using rule 6 (empty_decl_tag -> .) ]

    declarations                   shift and go to state 6
    statements_body                shift and go to state 36
    statement_sequence             shift and go to state 13
    empty_stmt_node                shift and go to state 14
    statement                      shift and go to state 15
    writeln_stmt                   shift and go to state 16
    write_stmt                     shift and go to state 17
    readln_stmt                    shift and go to state 18
    assign_stmt                    shift and go to state 19
    for_loop                       shift and go to state 20
    if_stmt                        shift and go to state 21
    while_loop                     shift and go to state 22
    block                          shift and go to state 23
    variable                       shift and go to state 27
    empty_decl_tag                 shift and go to state 9

state 12

    (3) block -> BEGIN statements_body . END

    END             shift and go to state 37


state 13

    (17) statements_body -> statement_sequence .

    END             reduce using rule 17 (statements_body -> statement_sequence .)


state 14

    (18) statements_body -> empty_stmt_node .
    (30) statement -> empty_stmt_node .

  ! reduce/reduce conflict for END resolved using rule 18 (statements_body -> empty_stmt_node .)
    END             reduce using rule 18 (statements_body -> empty_stmt_node .)
    SEMI            reduce using rule 30 (statement -> empty_stmt_node .)

  ! END             [ reduce using rule 30 (statement -> empty_stmt_node .) ]


state 15

    (19) statement_sequence -> statement .
    (20) statement_sequence -> statement . SEMI statement_sequence

    END             reduce using rule 19 (statement_sequence -> statement .)
    SEMI            shift and go to state 38


state 16

    (22) statement -> writeln_stmt .

    SEMI            reduce using rule 22 (statement -> writeln_stmt .)
    END             reduce using rule 22 (statement -> writeln_stmt .)
    ELSE            reduce using rule 22 (statement -> writeln_stmt .)


state 17

    (23) statement -> write_stmt .

    SEMI            reduce using rule 23 (statement -> write_stmt .)
    END             reduce using rule 23 (statement -> write_stmt .)
    ELSE            reduce using rule 23 (statement -> write_stmt .)


state 18

    (24) statement -> readln_stmt .

    SEMI            reduce using rule 24 (statement -> readln_stmt .)
    END             reduce using rule 24 (statement -> readln_stmt .)
    ELSE            reduce using rule 24 (statement -> readln_stmt .)


state 19

    (25) statement -> assign_stmt .

    SEMI            reduce using rule 25 (statement -> assign_stmt .)
    END             reduce using rule 25 (statement -> assign_stmt .)
    ELSE            reduce using rule 25 (statement -> assign_stmt .)


state 20

    (26) statement -> for_loop .

    SEMI            reduce using rule 26 (statement -> for_loop .)
    END             reduce using rule 26 (statement -> for_loop .)
    ELSE            reduce using rule 26 (statement -> for_loop .)


state 21

    (27) statement -> if_stmt .

    SEMI            reduce using rule 27 (statement -> if_stmt .)
    END             reduce using rule 27 (statement -> if_stmt .)
    ELSE            reduce using rule 27 (statement -> if_stmt .)


state 22

    (28) statement -> while_loop .

    SEMI            reduce using rule 28 (statement -> while_loop .)
    END             reduce using rule 28 (statement -> while_loop .)
    ELSE            reduce using rule 28 (statement -> while_loop .)


state 23

    (29) statement -> block .

    SEMI            reduce using rule 29 (statement -> block .)
    END             reduce using rule 29 (statement -> block .)
    ELSE            reduce using rule 29 (statement -> block .)


state 24

    (31) writeln_stmt -> WRITELN . LPAREN expr_list RPAREN

    LPAREN          shift and go to state 39


state 25

    (32) write_stmt -> WRITE . LPAREN expr_list RPAREN

    LPAREN          shift and go to state 40


state 26

    (33) readln_stmt -> READLN . LPAREN variable_list RPAREN

    LPAREN          shift and go to state 41


state 27

    (34) assign_stmt -> variable . ASSIGN expression

    ASSIGN          shift and go to state 42


state 28

    (35) for_loop -> FOR . ID ASSIGN expression TO expression DO statement

    ID              shift and go to state 43


state 29

    (40) variable -> ID .
    (41) variable -> ID . LSQUARE expression RSQUARE

    ASSIGN          reduce using rule 40 (variable -> ID .)
    GT              reduce using rule 40 (variable -> ID .)
    LT              reduce using rule 40 (variable -> ID .)
    GE              reduce using rule 40 (variable -> ID .)
    LE              reduce using rule 40 (variable -> ID .)
    EQ              reduce using rule 40 (variable -> ID .)
    NE              reduce using rule 40 (variable -> ID .)
    PLUS            reduce using rule 40 (variable -> ID .)
    MINUS           reduce using rule 40 (variable -> ID .)
    MULT            reduce using rule 40 (variable -> ID .)
    DIV             reduce using rule 40 (variable -> ID .)
    MOD             reduce using rule 40 (variable -> ID .)
    THEN            reduce using rule 40 (variable -> ID .)
    AND             reduce using rule 40 (variable -> ID .)
    OR              reduce using rule 40 (variable -> ID .)
    DO              reduce using rule 40 (variable -> ID .)
    COMMA           reduce using rule 40 (variable -> ID .)
    RPAREN          reduce using rule 40 (variable -> ID .)
    SEMI            reduce using rule 40 (variable -> ID .)
    END             reduce using rule 40 (variable -> ID .)
    ELSE            reduce using rule 40 (variable -> ID .)
    RSQUARE         reduce using rule 40 (variable -> ID .)
    TO              reduce using rule 40 (variable -> ID .)
    LSQUARE         shift and go to state 44


state 30

    (36) if_stmt -> IF . condition THEN statement else_clause
    (59) condition -> . condition AND condition
    (60) condition -> . condition OR condition
    (61) condition -> . expression GT expression
    (62) condition -> . expression LT expression
    (63) condition -> . expression GE expression
    (64) condition -> . expression LE expression
    (65) condition -> . expression EQ expression
    (66) condition -> . expression NE expression
    (67) condition -> . LPAREN condition RPAREN
    (68) condition -> . expression
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression MULT expression
    (51) expression -> . expression DIV expression
    (52) expression -> . expression MOD expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . factor
    (55) factor -> . NUMBER
    (56) factor -> . variable
    (57) factor -> . TRUE
    (58) factor -> . FALSE
    (40) variable -> . ID
    (41) variable -> . ID LSQUARE expression RSQUARE

    LPAREN          shift and go to state 47
    NUMBER          shift and go to state 49
    TRUE            shift and go to state 51
    FALSE           shift and go to state 52
    ID              shift and go to state 29

    condition                      shift and go to state 45
    expression                     shift and go to state 46
    factor                         shift and go to state 48
    variable                       shift and go to state 50

state 31

    (39) while_loop -> WHILE . condition DO statement
    (59) condition -> . condition AND condition
    (60) condition -> . condition OR condition
    (61) condition -> . expression GT expression
    (62) condition -> . expression LT expression
    (63) condition -> . expression GE expression
    (64) condition -> . expression LE expression
    (65) condition -> . expression EQ expression
    (66) condition -> . expression NE expression
    (67) condition -> . LPAREN condition RPAREN
    (68) condition -> . expression
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression MULT expression
    (51) expression -> . expression DIV expression
    (52) expression -> . expression MOD expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . factor
    (55) factor -> . NUMBER
    (56) factor -> . variable
    (57) factor -> . TRUE
    (58) factor -> . FALSE
    (40) variable -> . ID
    (41) variable -> . ID LSQUARE expression RSQUARE

    LPAREN          shift and go to state 47
    NUMBER          shift and go to state 49
    TRUE            shift and go to state 51
    FALSE           shift and go to state 52
    ID              shift and go to state 29

    condition                      shift and go to state 53
    expression                     shift and go to state 46
    factor                         shift and go to state 48
    variable                       shift and go to state 50

state 32

    (4) declarations -> VAR var_declaration_list_nonempty .

    BEGIN           reduce using rule 4 (declarations -> VAR var_declaration_list_nonempty .)


state 33

    (7) var_declaration_list_nonempty -> var_declaration . SEMI
    (8) var_declaration_list_nonempty -> var_declaration . SEMI var_declaration_list_nonempty

    SEMI            shift and go to state 54


state 34

    (9) var_declaration -> id_list . COLON type

    COLON           shift and go to state 55


state 35

    (15) id_list -> ID .
    (16) id_list -> ID . COMMA id_list

    COLON           reduce using rule 15 (id_list -> ID .)
    COMMA           shift and go to state 56


state 36

    (2) block -> declarations BEGIN statements_body . END

    END             shift and go to state 57


state 37

    (3) block -> BEGIN statements_body END .

    DOT             reduce using rule 3 (block -> BEGIN statements_body END .)
    SEMI            reduce using rule 3 (block -> BEGIN statements_body END .)
    END             reduce using rule 3 (block -> BEGIN statements_body END .)
    ELSE            reduce using rule 3 (block -> BEGIN statements_body END .)


state 38

    (20) statement_sequence -> statement SEMI . statement_sequence
    (19) statement_sequence -> . statement
    (20) statement_sequence -> . statement SEMI statement_sequence
    (22) statement -> . writeln_stmt
    (23) statement -> . write_stmt
    (24) statement -> . readln_stmt
    (25) statement -> . assign_stmt
    (26) statement -> . for_loop
    (27) statement -> . if_stmt
    (28) statement -> . while_loop
    (29) statement -> . block
    (30) statement -> . empty_stmt_node
    (31) writeln_stmt -> . WRITELN LPAREN expr_list RPAREN
    (32) write_stmt -> . WRITE LPAREN expr_list RPAREN
    (33) readln_stmt -> . READLN LPAREN variable_list RPAREN
    (34) assign_stmt -> . variable ASSIGN expression
    (35) for_loop -> . FOR ID ASSIGN expression TO expression DO statement
    (36) if_stmt -> . IF condition THEN statement else_clause
    (39) while_loop -> . WHILE condition DO statement
    (2) block -> . declarations BEGIN statements_body END
    (3) block -> . BEGIN statements_body END
    (21) empty_stmt_node -> .
    (40) variable -> . ID
    (41) variable -> . ID LSQUARE expression RSQUARE
    (4) declarations -> . VAR var_declaration_list_nonempty
    (5) declarations -> . empty_decl_tag
    (6) empty_decl_tag -> .

  ! shift/reduce conflict for BEGIN resolved as shift
    WRITELN         shift and go to state 24
    WRITE           shift and go to state 25
    READLN          shift and go to state 26
    FOR             shift and go to state 28
    IF              shift and go to state 30
    WHILE           shift and go to state 31
    BEGIN           shift and go to state 7
    SEMI            reduce using rule 21 (empty_stmt_node -> .)
    END             reduce using rule 21 (empty_stmt_node -> .)
    ID              shift and go to state 29
    VAR             shift and go to state 8

  ! BEGIN           [ reduce using rule 6 (empty_decl_tag -> .) ]

    statement                      shift and go to state 15
    statement_sequence             shift and go to state 58
    writeln_stmt                   shift and go to state 16
    write_stmt                     shift and go to state 17
    readln_stmt                    shift and go to state 18
    assign_stmt                    shift and go to state 19
    for_loop                       shift and go to state 20
    if_stmt                        shift and go to state 21
    while_loop                     shift and go to state 22
    block                          shift and go to state 23
    empty_stmt_node                shift and go to state 59
    variable                       shift and go to state 27
    declarations                   shift and go to state 6
    empty_decl_tag                 shift and go to state 9

state 39

    (31) writeln_stmt -> WRITELN LPAREN . expr_list RPAREN
    (44) expr_list -> . expr
    (45) expr_list -> . expr COMMA expr_list
    (46) expr -> . STRING_LITERAL
    (47) expr -> . expression
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression MULT expression
    (51) expression -> . expression DIV expression
    (52) expression -> . expression MOD expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . factor
    (55) factor -> . NUMBER
    (56) factor -> . variable
    (57) factor -> . TRUE
    (58) factor -> . FALSE
    (40) variable -> . ID
    (41) variable -> . ID LSQUARE expression RSQUARE

    STRING_LITERAL  shift and go to state 63
    LPAREN          shift and go to state 60
    NUMBER          shift and go to state 49
    TRUE            shift and go to state 51
    FALSE           shift and go to state 52
    ID              shift and go to state 29

    expr_list                      shift and go to state 61
    expr                           shift and go to state 62
    expression                     shift and go to state 64
    factor                         shift and go to state 48
    variable                       shift and go to state 50

state 40

    (32) write_stmt -> WRITE LPAREN . expr_list RPAREN
    (44) expr_list -> . expr
    (45) expr_list -> . expr COMMA expr_list
    (46) expr -> . STRING_LITERAL
    (47) expr -> . expression
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression MULT expression
    (51) expression -> . expression DIV expression
    (52) expression -> . expression MOD expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . factor
    (55) factor -> . NUMBER
    (56) factor -> . variable
    (57) factor -> . TRUE
    (58) factor -> . FALSE
    (40) variable -> . ID
    (41) variable -> . ID LSQUARE expression RSQUARE

    STRING_LITERAL  shift and go to state 63
    LPAREN          shift and go to state 60
    NUMBER          shift and go to state 49
    TRUE            shift and go to state 51
    FALSE           shift and go to state 52
    ID              shift and go to state 29

    expr_list                      shift and go to state 65
    expr                           shift and go to state 62
    expression                     shift and go to state 64
    factor                         shift and go to state 48
    variable                       shift and go to state 50

state 41

    (33) readln_stmt -> READLN LPAREN . variable_list RPAREN
    (42) variable_list -> . variable
    (43) variable_list -> . variable COMMA variable_list
    (40) variable -> . ID
    (41) variable -> . ID LSQUARE expression RSQUARE

    ID              shift and go to state 29

    variable_list                  shift and go to state 66
    variable                       shift and go to state 67

state 42

    (34) assign_stmt -> variable ASSIGN . expression
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression MULT expression
    (51) expression -> . expression DIV expression
    (52) expression -> . expression MOD expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . factor
    (55) factor -> . NUMBER
    (56) factor -> . variable
    (57) factor -> . TRUE
    (58) factor -> . FALSE
    (40) variable -> . ID
    (41) variable -> . ID LSQUARE expression RSQUARE

    LPAREN          shift and go to state 60
    NUMBER          shift and go to state 49
    TRUE            shift and go to state 51
    FALSE           shift and go to state 52
    ID              shift and go to state 29

    variable                       shift and go to state 50
    expression                     shift and go to state 68
    factor                         shift and go to state 48

state 43

    (35) for_loop -> FOR ID . ASSIGN expression TO expression DO statement

    ASSIGN          shift and go to state 69


state 44

    (41) variable -> ID LSQUARE . expression RSQUARE
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression MULT expression
    (51) expression -> . expression DIV expression
    (52) expression -> . expression MOD expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . factor
    (55) factor -> . NUMBER
    (56) factor -> . variable
    (57) factor -> . TRUE
    (58) factor -> . FALSE
    (40) variable -> . ID
    (41) variable -> . ID LSQUARE expression RSQUARE

    LPAREN          shift and go to state 60
    NUMBER          shift and go to state 49
    TRUE            shift and go to state 51
    FALSE           shift and go to state 52
    ID              shift and go to state 29

    expression                     shift and go to state 70
    factor                         shift and go to state 48
    variable                       shift and go to state 50

state 45

    (36) if_stmt -> IF condition . THEN statement else_clause
    (59) condition -> condition . AND condition
    (60) condition -> condition . OR condition

    THEN            shift and go to state 71
    AND             shift and go to state 72
    OR              shift and go to state 73


state 46

    (61) condition -> expression . GT expression
    (62) condition -> expression . LT expression
    (63) condition -> expression . GE expression
    (64) condition -> expression . LE expression
    (65) condition -> expression . EQ expression
    (66) condition -> expression . NE expression
    (68) condition -> expression .
    (48) expression -> expression . PLUS expression
    (49) expression -> expression . MINUS expression
    (50) expression -> expression . MULT expression
    (51) expression -> expression . DIV expression
    (52) expression -> expression . MOD expression

    GT              shift and go to state 74
    LT              shift and go to state 75
    GE              shift and go to state 76
    LE              shift and go to state 77
    EQ              shift and go to state 78
    NE              shift and go to state 79
    THEN            reduce using rule 68 (condition -> expression .)
    AND             reduce using rule 68 (condition -> expression .)
    OR              reduce using rule 68 (condition -> expression .)
    DO              reduce using rule 68 (condition -> expression .)
    RPAREN          reduce using rule 68 (condition -> expression .)
    PLUS            shift and go to state 80
    MINUS           shift and go to state 81
    MULT            shift and go to state 82
    DIV             shift and go to state 83
    MOD             shift and go to state 84


state 47

    (67) condition -> LPAREN . condition RPAREN
    (53) expression -> LPAREN . expression RPAREN
    (59) condition -> . condition AND condition
    (60) condition -> . condition OR condition
    (61) condition -> . expression GT expression
    (62) condition -> . expression LT expression
    (63) condition -> . expression GE expression
    (64) condition -> . expression LE expression
    (65) condition -> . expression EQ expression
    (66) condition -> . expression NE expression
    (67) condition -> . LPAREN condition RPAREN
    (68) condition -> . expression
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression MULT expression
    (51) expression -> . expression DIV expression
    (52) expression -> . expression MOD expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . factor
    (55) factor -> . NUMBER
    (56) factor -> . variable
    (57) factor -> . TRUE
    (58) factor -> . FALSE
    (40) variable -> . ID
    (41) variable -> . ID LSQUARE expression RSQUARE

    LPAREN          shift and go to state 47
    NUMBER          shift and go to state 49
    TRUE            shift and go to state 51
    FALSE           shift and go to state 52
    ID              shift and go to state 29

    condition                      shift and go to state 85
    expression                     shift and go to state 86
    factor                         shift and go to state 48
    variable                       shift and go to state 50

state 48

    (54) expression -> factor .

    GT              reduce using rule 54 (expression -> factor .)
    LT              reduce using rule 54 (expression -> factor .)
    GE              reduce using rule 54 (expression -> factor .)
    LE              reduce using rule 54 (expression -> factor .)
    EQ              reduce using rule 54 (expression -> factor .)
    NE              reduce using rule 54 (expression -> factor .)
    PLUS            reduce using rule 54 (expression -> factor .)
    MINUS           reduce using rule 54 (expression -> factor .)
    MULT            reduce using rule 54 (expression -> factor .)
    DIV             reduce using rule 54 (expression -> factor .)
    MOD             reduce using rule 54 (expression -> factor .)
    THEN            reduce using rule 54 (expression -> factor .)
    AND             reduce using rule 54 (expression -> factor .)
    OR              reduce using rule 54 (expression -> factor .)
    DO              reduce using rule 54 (expression -> factor .)
    COMMA           reduce using rule 54 (expression -> factor .)
    RPAREN          reduce using rule 54 (expression -> factor .)
    SEMI            reduce using rule 54 (expression -> factor .)
    END             reduce using rule 54 (expression -> factor .)
    ELSE            reduce using rule 54 (expression -> factor .)
    RSQUARE         reduce using rule 54 (expression -> factor .)
    TO              reduce using rule 54 (expression -> factor .)


state 49

    (55) factor -> NUMBER .

    GT              reduce using rule 55 (factor -> NUMBER .)
    LT              reduce using rule 55 (factor -> NUMBER .)
    GE              reduce using rule 55 (factor -> NUMBER .)
    LE              reduce using rule 55 (factor -> NUMBER .)
    EQ              reduce using rule 55 (factor -> NUMBER .)
    NE              reduce using rule 55 (factor -> NUMBER .)
    PLUS            reduce using rule 55 (factor -> NUMBER .)
    MINUS           reduce using rule 55 (factor -> NUMBER .)
    MULT            reduce using rule 55 (factor -> NUMBER .)
    DIV             reduce using rule 55 (factor -> NUMBER .)
    MOD             reduce using rule 55 (factor -> NUMBER .)
    THEN            reduce using rule 55 (factor -> NUMBER .)
    AND             reduce using rule 55 (factor -> NUMBER .)
    OR              reduce using rule 55 (factor -> NUMBER .)
    DO              reduce using rule 55 (factor -> NUMBER .)
    COMMA           reduce using rule 55 (factor -> NUMBER .)
    RPAREN          reduce using rule 55 (factor -> NUMBER .)
    SEMI            reduce using rule 55 (factor -> NUMBER .)
    END             reduce using rule 55 (factor -> NUMBER .)
    ELSE            reduce using rule 55 (factor -> NUMBER .)
    RSQUARE         reduce using rule 55 (factor -> NUMBER .)
    TO              reduce using rule 55 (factor -> NUMBER .)


state 50

    (56) factor -> variable .

    GT              reduce using rule 56 (factor -> variable .)
    LT              reduce using rule 56 (factor -> variable .)
    GE              reduce using rule 56 (factor -> variable .)
    LE              reduce using rule 56 (factor -> variable .)
    EQ              reduce using rule 56 (factor -> variable .)
    NE              reduce using rule 56 (factor -> variable .)
    PLUS            reduce using rule 56 (factor -> variable .)
    MINUS           reduce using rule 56 (factor -> variable .)
    MULT            reduce using rule 56 (factor -> variable .)
    DIV             reduce using rule 56 (factor -> variable .)
    MOD             reduce using rule 56 (factor -> variable .)
    THEN            reduce using rule 56 (factor -> variable .)
    AND             reduce using rule 56 (factor -> variable .)
    OR              reduce using rule 56 (factor -> variable .)
    DO              reduce using rule 56 (factor -> variable .)
    COMMA           reduce using rule 56 (factor -> variable .)
    RPAREN          reduce using rule 56 (factor -> variable .)
    SEMI            reduce using rule 56 (factor -> variable .)
